<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sum or Subtract</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="goodbye_world">Goodbye, cruel world</string>

    <string name="welcome_message">Калькулятор</string>
    <string name="add">Сложить</string>
    <string name="subtract">Вычесть</string>
    <string name="the_1st_operand">Первый операнд</string>
    <string name="the_2nd_operand">Второй операнд</string>
    <string name="result">Результат</string>
    <string name="title_activity_query_operand_values">Ввод значений</string>
    <string name="input_operand_values">Введите значения операндов</string>
    <string name="compute">Вычислить</string>
	<string name="cancel">Отмена</string>
	<string name="operation_canceled">Операция отменена</string>
	
	<string name="history_and_size">История операций, кол-во:</string>
	<string name="zero">0</string>
	<string name="operation_id">Номер операции</string>
	<string name="previous_in_history">&lt;</string>
	<string name="next_in_history">&gt;</string>
	<string name="find_in_history">=</string>
	<string name="operation">Операция</string>
	<string name="invalid_history_item_id">Неверный номер операции в истории операций</string>
	<string name="gotyou">Понял</string>
    
</resources>
