<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QueryOperandValuesActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_operand_values" />

   <LinearLayout
   	    android:id="@+id/operands_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

    	<EditText
        	android:id="@+id/query_operand_1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="0.5"
        	android:ems="10"
        	android:hint="@string/the_1st_operand"
        	android:enabled="true"
        	android:inputType="number" >

            <requestFocus />
        </EditText>
 
        <EditText
            android:id="@+id/query_operand_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/the_2nd_operand"
            android:enabled="true"
            android:inputType="number" />
   </LinearLayout>
 
   <LinearLayout
        android:id="@+id/do_or_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/operands_layout"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >
    	<!-- TODO: move layout_marginTop into dimen -->
 
        <Button
            android:id="@+id/btn_compute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compute"
            android:layout_weight="0.5" />
            <!-- android:onClick="compute"/-->
             
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cancel" />
            <!-- android:onClick="cancel"/ -->
           
     </LinearLayout>
   
</RelativeLayout>
